fix: remove white space on right side of home screen
- Hide workbench wrapper when chat not started (was taking flex-1 space)
- Fix workbench not collapsing when closed (flex-1 was overriding w-0)
- Add overflow-x: hidden to html/body/#root as safety measure

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -11,6 +11,11 @@ html,
 body {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
+}
+
+#root {
+  overflow-x: hidden;
 }
 
 /* Logo theme support - invert black logo to white on dark themes */
